--- a/res/css/_components.scss
+++ b/res/css/_components.scss
@@ -261,6 +261,7 @@
 @import "./views/settings/_CryptographyPanel.scss";
 @import "./views/settings/_DevicesPanel.scss";
 @import "./views/settings/_E2eAdvancedPanel.scss";
+@import "./views/settings/_E2eTrustPanel.scss";
 @import "./views/settings/_EmailAddresses.scss";
 @import "./views/settings/_FontScalingPanel.scss";
 @import "./views/settings/_ImageSizePanel.scss";
