--- a/res/css/views/rooms/_RoomHeader.scss
+++ b/res/css/views/rooms/_RoomHeader.scss
@@ -141,25 +141,24 @@ limitations under the License.
 }
 
 .mx_RoomHeader_topic {
-    $line-height: 1.2em;
+    $lineHeight: $font-16px;
     $lines: 2;
 
     flex: 1;
     color: $roomtopic-color;
     font-weight: 400;
     font-size: $font-13px;
+    line-height: $lineHeight;
+    max-height: calc($lineHeight * $lines);
     border-bottom: 1px solid transparent;
-    line-height: $line-height;
-    max-height: calc($line-height * $lines);
 
     // to align baseline of topic with room name
     margin: 4px 7px 0;
 
     overflow: hidden;
-    line-clamp: $lines; // https://drafts.csswg.org/css-overflow-3/#line-clamp
-    display: -webkit-box;
-    -webkit-line-clamp: $lines;
+    -webkit-line-clamp: $lines; // legacy compatibility. See: https://drafts.csswg.org/css-overflow-3/#webkit-line-clamp
     -webkit-box-orient: vertical;
+    display: -webkit-box;
 }
 
 .mx_RoomHeader_avatar {
