Remove "legacy compatibility" comment
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_RoomHeader.scss
+++ b/res/css/views/rooms/_RoomHeader.scss
@@ -156,7 +156,7 @@ limitations under the License.
     margin: 4px 7px 0;
 
     overflow: hidden;
-    -webkit-line-clamp: $lines; // legacy compatibility. See: https://drafts.csswg.org/css-overflow-3/#webkit-line-clamp
+    -webkit-line-clamp: $lines; // See: https://drafts.csswg.org/css-overflow-3/#webkit-line-clamp
     -webkit-box-orient: vertical;
     display: -webkit-box;
 }
