--- a/res/css/views/dialogs/security/_AccessSecretStorageDialog.scss
+++ b/res/css/views/dialogs/security/_AccessSecretStorageDialog.scss
@@ -16,7 +16,7 @@ limitations under the License.
 
 .mx_AccessSecretStorageDialog_reset {
     position: relative;
-    padding-left: 24px; // 16px icon + 8px padding
+    padding-inline-start: $spacing-24; // 16px icon + 8px padding
 
     &::before {
         content: "";
@@ -40,9 +40,9 @@ limitations under the License.
     display: inline-block;
     width: 24px;
     height: 24px;
-    margin-right: 8px;
+    margin-inline-end: $spacing-8;
     position: relative;
-    top: 5px;
+    top: 5px; // TODO: spacing variable
     background-color: $primary-content;
 }
 
@@ -81,7 +81,7 @@ limitations under the License.
 }
 
 .mx_AccessSecretStorageDialog_recoveryKeyEntry_entryControlSeparatorText {
-    margin: 16px;
+    margin: $spacing-16;
 }
 
 .mx_AccessSecretStorageDialog_recoveryKeyFeedback {
@@ -94,7 +94,7 @@ limitations under the License.
         mask-repeat: no-repeat;
         mask-position: center;
         mask-size: 20px;
-        margin-right: 5px;
+        margin-inline-end: 5px; // TODO: spacing variable
     }
 }
 
@@ -123,15 +123,15 @@ limitations under the License.
         text-align: initial;
         display: flex;
         flex-flow: column;
-        gap: 14px;
+        gap: 14px;  // TODO: spacing variable
 
         .mx_Dialog_buttons_additive {
             float: none;
         }
 
         .mx_Dialog_buttons_row {
-            gap: 16px; // TODO: needs normalization
-            padding-left: 24px; // See mx_AccessSecretStorageDialog_reset above
+            gap: $spacing-16; // TODO: needs normalization
+            padding-inline-start: $spacing-24; // See mx_AccessSecretStorageDialog_reset above
 
             button {
                 margin: 0 !important; // override rules on common.scss
