Use more simplified way
Because the float property prevents the margin from appearing, removing
the property is more straightforward than adding other rules.

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -154,7 +154,7 @@ limitations under the License.
 
     &[data-self=true] {
         .mx_EventTile_line {
-            float: right;
+            margin-inline-start: auto;
             border-bottom-left-radius: var(--cornerRadius);
 
             .mx_MImageBody .mx_MImageBody_thumbnail_container,
@@ -592,13 +592,6 @@ limitations under the License.
         &::before {
             right: 0; // match alignment of the hover background to that of chat bubbles
         }
-    }
-
-    // style a list inside the generic event list
-    .mx_GenericEventListSummary_unstyledList {
-        display: flex;
-        flex-direction: column;
-        margin: 0;
     }
 }
 
