--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -223,8 +223,7 @@ $left-gutter: 64px;
         overflow-y: hidden;
     }
 
-    &.mx_EventTile_selected .mx_EventTile_line,
-    &:hover .mx_EventTile_line {
+    &.mx_EventTile_selected .mx_EventTile_line{
         border-top-left-radius: 4px;
         border-bottom-left-radius: 4px;
     }
