--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -292,15 +292,38 @@ limitations under the License.
         }
     }
 
-    &:not(.mx_EventTile_noBubble) .mx_EventTile_line:not(.mx_EventTile_mediaLine) {
+    &:not(.mx_EventTile_noBubble) {
         // make the top and bottom padding 1px smaller so that we can pad .mx_EventTile_content by 1px
         // to avoid anti-zalgo cutting off our larger than text emojis.
-        padding: calc(var(--gutterSize) - 1px);
-        padding-right: 60px; // space for the timestamp
-        background: var(--backgroundColor);
+        $padding: calc(var(--gutterSize) - 1px);
 
-        .mx_EventTile_content {
-            padding: 1px;
+        &.mx_EventTile_isEditing {
+            // Style rules of a bubble whose message is being edited
+
+            .mx_EventTile_line:not(.mx_EventTile_mediaLine) {
+                padding-top: calc($padding - 7px); // 7px: margin-top of mx_EditMessageComposer
+                padding-inline-start: 0;
+
+                .mx_EventTile_e2eIcon {
+                    margin-top: 7px;  // 7px: margin-top of mx_EditMessageComposer
+                }
+
+                .mx_EditMessageComposer {
+                    // reset the negative margin settings of mx_EditMessageComposer
+                    margin-top: 0;
+                    margin-inline-start: 0;
+                }
+            }
+        }
+
+        .mx_EventTile_line:not(.mx_EventTile_mediaLine) {
+            padding: $padding;
+            padding-right: 60px; // space for the timestamp
+            background: var(--backgroundColor);
+
+            .mx_EventTile_content {
+                padding: 1px;
+            }
         }
     }
 
