--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -146,7 +146,8 @@ limitations under the License.
         }
 
         .mx_MessageActionBar {
-            right: -100px; // to make sure it doesn't overflow to the left or cover sender profile
+            right: initial;
+            left: calc(100% - 32px); // 32px: width of a message action bar item
         }
 
         --backgroundColor: $eventbubble-others-bg;
@@ -195,6 +196,7 @@ limitations under the License.
                 order: -1;
             }
         }
+
         .mx_EventTile_avatar {
             top: -19px; // height of the sender block
             right: -35px;
@@ -582,7 +584,8 @@ limitations under the License.
         margin-right: 0;
 
         .mx_MessageActionBar {
-            right: 127px; // align with that of right-column bubbles
+            right: initial;
+            left: calc(100% - 161px); // align with that of right-column bubbles
         }
 
         .mx_ReadReceiptGroup {
