--- a/res/css/_common.scss
+++ b/res/css/_common.scss
@@ -692,6 +692,18 @@ legend {
     }
 }
 
+@define-mixin ContextMenu {
+    padding: 16px 8px 16px 16px;
+    width: max-content;
+    max-width: 240px;
+    max-height: 400px;
+    border: 1px solid rgba($primary-content, .1);
+    border-radius: 8px;
+    box-shadow: 0 8px 4px rgba(0, 0, 0, 0.08);
+    display: flex;
+    flex-direction: column;
+}
+
 @define-mixin ListResetDefault {
     list-style: none;
     padding: 0;
