--- a/res/css/views/rooms/_RecentlyViewedButton.scss
+++ b/res/css/views/rooms/_RecentlyViewedButton.scss
@@ -15,15 +15,7 @@ limitations under the License.
 */
 
 .mx_RecentlyViewedButton_ContextMenu {
-    padding: 16px 8px 16px 16px;
-    width: max-content;
-    max-width: 240px;
-    max-height: 400px;
-    border: 1px solid rgba($primary-content, .1);
-    border-radius: 8px;
-    box-shadow: 0 8px 4px rgba(0, 0, 0, 0.08);
-    display: flex;
-    flex-direction: column;
+    @mixin ContextMenu;
 
     > h4 {
         margin: 0 0 12px 0;
