Mixin - ContextMenu_title
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/_common.scss
+++ b/res/css/_common.scss
@@ -704,6 +704,10 @@ legend {
     flex-direction: column;
 }
 
+@define-mixin ContextMenu_title {
+    margin: 0 0 12px 0;
+}
+
 @define-mixin ListResetDefault {
     list-style: none;
     padding: 0;
