--- a/res/css/_common.scss
+++ b/res/css/_common.scss
@@ -702,6 +702,19 @@ legend {
     box-shadow: 0 8px 4px rgba(0, 0, 0, 0.08);
     display: flex;
     flex-direction: column;
+
+    .mx_AccessibleButton {
+        margin-top: 2px;
+        padding: 4px;
+        display: flex;
+        align-items: center;
+        border-radius: 8px;
+        min-height: 34px;
+
+        &:hover {
+            background-color: $panel-actions;
+        }
+    }
 }
 
 @define-mixin ContextMenu_title {
