--- a/res/css/views/rooms/_ReadReceiptGroup.scss
+++ b/res/css/views/rooms/_ReadReceiptGroup.scss
@@ -97,9 +97,7 @@ limitations under the License.
 
     .mx_ReadReceiptGroup_person {
         .mx_BaseAvatar {
-            margin: 6px 8px;
-            align-self: center;
-            justify-self: center;
+            @mixin ContextMenu_avatar;
         }
 
         .mx_ReadReceiptGroup_name {
