--- a/res/css/views/rooms/_RecentlyViewedButton.scss
+++ b/res/css/views/rooms/_RecentlyViewedButton.scss
@@ -31,8 +31,7 @@ limitations under the License.
 
     .mx_AccessibleButton {
         .mx_DecoratedRoomAvatar {
-            margin-right: 8px;
-            width: 24px;
+            @mixin ContextMenu_avatar;
 
             .mx_BaseAvatar {
                 width: inherit;
