--- a/res/css/views/rooms/_RecentlyViewedButton.scss
+++ b/res/css/views/rooms/_RecentlyViewedButton.scss
@@ -49,9 +49,7 @@ limitations under the License.
         }
 
         .mx_RecentlyViewedButton_entry_spaces {
-            font-size: $font-12px;
-            line-height: $font-15px;
-            color: $secondary-content;
+            @mixin ContextMenu_description;
         }
     }
 }
