Mixin - ContextMenu_row
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/_common.scss
+++ b/res/css/_common.scss
@@ -725,6 +725,14 @@ legend {
     margin: 0 0 12px 0;
 }
 
+@define-mixin ContextMenu_row {
+    overflow-y: auto;
+
+    * {
+        margin-inline-end: 4px;
+    }
+}
+
 @define-mixin ContextMenu_avatar {
     margin-inline-end: 8px;
     width: 24px;
