--- a/res/css/views/rooms/_RecentlyViewedButton.scss
+++ b/res/css/views/rooms/_RecentlyViewedButton.scss
@@ -22,11 +22,7 @@ limitations under the License.
     }
 
     > div {
-        overflow-y: auto;
-
-        * {
-            margin-right: 4px;
-        }
+        @mixin ContextMenu_row;
     }
 
     .mx_AccessibleButton {
