--- a/res/css/views/rooms/_ReadReceiptGroup.scss
+++ b/res/css/views/rooms/_ReadReceiptGroup.scss
@@ -95,6 +95,10 @@ limitations under the License.
         outline: none;
     }
 
+    .mx_ReadReceiptGroup_receipts {
+        @mixin ContextMenu_row;
+    }
+
     .mx_ReadReceiptGroup_person {
         .mx_BaseAvatar {
             @mixin ContextMenu_avatar;
