Copy properties from _ContextualMenu
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_RecentlyViewedButton.scss
+++ b/res/css/views/rooms/_RecentlyViewedButton.scss
@@ -16,4 +16,7 @@ limitations under the License.
 
 .mx_ContextMenu--RecentlyViewedButton {
     @mixin ContextMenu;
+
+    box-shadow: 0 8px 4px rgba(0, 0, 0, 0.08);
+    position: relative;
 }
