--- a/res/css/_common.scss
+++ b/res/css/_common.scss
@@ -700,9 +700,14 @@ legend {
     max-height: 400px;
     border: 1px solid rgba($primary-content, .1);
     border-radius: 8px;
-    box-shadow: 0 8px 4px rgba(0, 0, 0, 0.08);
+    box-shadow: 4px 4px 12px 0 $menu-box-shadow-color;
     display: flex;
     flex-direction: column;
+    background-color: $menu-bg-color;
+    color: $primary-content;
+    font-size: $font-14px;
+    position: absolute;
+    z-index: 5001;
 
     .mx_ContextMenu_Header {
         margin: 0 0 $spacing-12 0;
