Add border to the tooltip
It creates a clear contrast on the dark mode

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_ReadReceiptGroup.scss
+++ b/res/css/views/rooms/_ReadReceiptGroup.scss
@@ -95,4 +95,6 @@ limitations under the License.
     overflow-y: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    box-sizing: border-box;
+    border: 1px solid rgba($primary-content, .1);
 }
