switch back to accent-alt for beta pills

--- a/res/css/views/beta/_BetaCard.scss
+++ b/res/css/views/beta/_BetaCard.scss
@@ -112,7 +112,7 @@ limitations under the License.
 }
 
 .mx_BetaCard_betaPill {
-    background-color: $accent;
+    background-color: $accent-alt;
     padding: 4px 10px;
     border-radius: 8px;
     text-transform: uppercase;
