--- a/res/css/_common.scss
+++ b/res/css/_common.scss
@@ -692,13 +692,18 @@ legend {
     }
 }
 
+@define-mixin ContextMenu_border {
+    border: 1px solid rgba($primary-content, .1);
+}
+
 @define-mixin ContextMenu {
+    @mixin ContextMenu_border;
+
     padding: $spacing-16;
     padding-inline-end: $spacing-8;
     width: max-content;
     max-width: 240px;
     max-height: 400px;
-    border: 1px solid rgba($primary-content, .1);
     border-radius: 8px;
     box-shadow: 4px 4px 12px 0 $menu-box-shadow-color;
     display: flex;
