--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -16,6 +16,8 @@ limitations under the License.
 */
 
 $left-gutter: 64px;
+$threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
+$eventTileZIndex: 10;
 
 .mx_EventTile {
     flex-shrink: 0;
@@ -811,9 +813,6 @@ $left-gutter: 64px;
     width: initial;
 }
 
-// See: _commons.scss
-$threadInfoLineHeight: calc(2 * $font-12px);
-
 .mx_ThreadInfo_sender {
     font-weight: $font-semi-bold;
     line-height: $threadInfoLineHeight;
@@ -871,6 +870,7 @@ $threadInfoLineHeight: calc(2 * $font-12px);
         .mx_MessageActionBar {
             right: 0;
             top: -36px; // 2px above EventTile
+            z-index: $eventTileZIndex;
         }
     }
 }
@@ -913,7 +913,7 @@ $threadInfoLineHeight: calc(2 * $font-12px);
         left: 0;
         right: 0;
         /* enough to cover all sibling elements */
-        z-index: 10;
+        z-index: $eventTileZIndex;
     }
 
     &:last-child {
