Disable the message action bar when hovering over the 1px border between threads in the threads list
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -838,6 +838,7 @@ $threadInfoLineHeight: calc(2 * $font-12px);
         height: 1px;
         bottom: calc(-1 * var(--topOffset));
         background-color: $quinary-content;
+        pointer-events: none; // disable the message action bar on hover
     }
 
     &::before {
