--- a/res/css/views/beta/_BetaCard.scss
+++ b/res/css/views/beta/_BetaCard.scss
@@ -66,7 +66,7 @@ limitations under the License.
                 }
             }
 
-            .mx_BetaCard_disclaimer {
+            .mx_BetaCard_faq {
                 font-size: $font-12px;
                 line-height: $font-15px;
                 color: $secondary-content;
