--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -20,10 +20,6 @@ limitations under the License.
     height: 100px;
     overflow: visible;
 
-    &:not(.mx_ThreadView).mx_BaseCard {
-        padding-right: 2px;
-    }
-
     .mx_BaseCard_header {
         margin-bottom: 12px;
 
@@ -111,15 +107,11 @@ limitations under the License.
     .mx_AutoHideScrollbar {
         background-color: $background;
         border-radius: 8px;
-        width: calc(100% - 6px); // 6px: 8px - 2px (&:not(.mx_ThreadView).mx_BaseCard)
         padding-inline-end: 0;
+        overflow-y: scroll; // set gap between the thread tile and the right border
     }
 
     &.mx_ThreadView .mx_ThreadView_timelinePanelWrapper {
-        /* the scrollbar is 8px wide, and we want a 12px gap with the side of the
-        panel. Hence the magic number, 8+4=12 */
-        width: calc(100% + 6px);
-        padding-right: 4px;
         position: relative;
         min-height: 0; // don't displace the composer
         flex-grow: 1;
@@ -131,7 +123,7 @@ limitations under the License.
 
     .mx_RoomView_messagePanel { // To avoid the rule from being applied to .mx_ThreadPanel_empty
         .mx_RoomView_messageListWrapper {
-            width: calc(100% + $spacing-8); // 8px: scroll bar width
+            width: calc(100% + 6px); // 8px - 2px
         }
     }
 
@@ -292,7 +284,6 @@ limitations under the License.
     top: 0;
     bottom: 0;
     left: 0;
-    right: 6px;
     padding: 20px;
 
     h2 {
