--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -113,7 +113,7 @@ limitations under the License.
 
     // Override _GroupLayout.scss for the thread panel
     .mx_GroupLayout {
-        .mx_EventTile {
+        .mx_EventTile[data-shape=ThreadsList] {
             > .mx_DisambiguatedProfile {
                 margin-inline-start: 0;
                 line-height: normal;
@@ -122,6 +122,19 @@ limitations under the License.
             .mx_MessageTimestamp {
                 position: initial;
                 width: auto;
+            }
+
+            .mx_EventTile_line {
+                padding-bottom: 0; // Override mx_EventTile_line on _GroupLayout.scss
+            }
+        }
+
+        .mx_EventTile[data-layout=group],
+        .mx_EventTile[data-shape=ThreadsList] {
+            .mx_MessageActionBar {
+                right: 0;
+                top: -36px; // 2px above EventTile
+                z-index: 10; // See _EventTile.scss
             }
         }
     }
