--- a/res/css/views/rooms/_GroupLayout.scss
+++ b/res/css/views/rooms/_GroupLayout.scss
@@ -34,8 +34,7 @@ $left-gutter: 64px;
             width: $MessageTimestamp_width;
         }
 
-        .mx_EventTile_line,
-        .mx_EventTile_reply {
+        .mx_EventTile_line, .mx_EventTile_reply {
             padding-top: 1px;
             padding-bottom: 3px;
             line-height: $font-22px;
