Add margin to the location map inside ThreadView
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -887,6 +887,7 @@ $left-gutter: 64px;
         .mx_RedactedBody,
         .mx_UnknownBody,
         .mx_MPollBody,
+        .mx_MLocationBody,
         .mx_ReplyChain_wrapper,
         .mx_ReactionsRow {
             margin-left: $spacing-start;
