Remove margin from location map inside a reply
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -901,6 +901,13 @@ $left-gutter: 64px;
             }
         }
 
+        .mx_ReplyChain_wrapper {
+            .mx_MLocationBody {
+                margin-inline-start: 0;
+                margin-inline-end: 0;
+            }
+        }
+
         .mx_MessageTimestamp {
             top: 2px !important;
             width: auto;
