--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -883,6 +883,7 @@ $left-gutter: 64px;
         width: 100%;
 
         .mx_EventTile_content,
+        .mx_EventTile_body,
         .mx_HiddenBody,
         .mx_RedactedBody,
         .mx_UnknownBody,
