read receipts: split alignment into separate class

--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -129,7 +129,7 @@ limitations under the License.
         padding-left: 36px;
     }
 
-    .mx_ReadReceiptGroup {
+    .mx_ReadReceiptGroup--alignWithMessage {
         top: -6px;
     }
 
