--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -452,7 +452,7 @@ limitations under the License.
         }
     }
 
-    .mx_ReadReceiptGroup {
+    .mx_ReadReceiptGroup--alignWithMessage {
         position: absolute;
         // as close to right gutter without clipping as possible
         right: -78px;
@@ -604,7 +604,7 @@ limitations under the License.
             right: 48px; // align with that of right-column bubbles
         }
 
-        .mx_ReadReceiptGroup {
+        .mx_ReadReceiptGroup--alignWithMessage {
             right: -18px; // match alignment to RRs of chat bubbles
         }
 
