--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -149,6 +149,11 @@ limitations under the License.
             right: -100px; // to make sure it doesn't overflow to the left or cover sender profile
         }
 
+        .mx_ThreadSummary {
+            margin-inline-start: calc(-1 * var(--gutterSize));
+            margin-inline-end: auto;
+        }
+
         --backgroundColor: $eventbubble-others-bg;
     }
 
@@ -173,8 +178,8 @@ limitations under the License.
         }
 
         .mx_ThreadSummary {
-            float: right;
-            margin-right: calc(-1 * var(--gutterSize));
+            margin-inline-start: auto;
+            margin-inline-end: calc(-1 * var(--gutterSize));
         }
 
         .mx_DisambiguatedProfile {
