--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -886,12 +886,13 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         width: 100%;
 
         .mx_EventTile_content,
-        .mx_EventTile_body,
         .mx_HiddenBody,
         .mx_RedactedBody,
         .mx_UnknownBody,
         .mx_MPollBody,
         .mx_MLocationBody,
+        .mx_MLocationBody_error,
+        .mx_MLocationBody_fallback,
         .mx_ReplyChain_wrapper,
         .mx_ReactionsRow {
             margin-left: $spacing-start;
@@ -903,6 +904,12 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
             .mx_MImageBody {
                 margin: 0;
             }
+        }
+
+        .mx_MLocationBody_error {
+            // See: mx_EventTile_tileError of _EventTile.scss
+            display: block;
+            text-align: start;
         }
 
         .mx_ReplyChain_wrapper {
