--- a/res/css/views/messages/_DisambiguatedProfile.scss
+++ b/res/css/views/messages/_DisambiguatedProfile.scss
@@ -18,6 +18,7 @@ limitations under the License.
 .mx_DisambiguatedProfile {
     overflow: hidden;
     text-overflow: ellipsis;
+    cursor: pointer;
 
     .mx_DisambiguatedProfile_displayName {
         font-weight: 600;
