--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -116,14 +116,12 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         color: $primary-content;
         font-size: $font-14px;
         display: inline-block;
-        /* anti-zalgo, with overflow hidden */
-        overflow: hidden;
         padding-bottom: 0px;
         padding-top: 0px;
         margin: 0px;
-        /* the next three lines, along with overflow hidden, truncate long display names */
+
+        // truncate long display names
         white-space: nowrap;
-        text-overflow: ellipsis;
         max-width: calc(100% - $left-gutter);
     }
 
