--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -101,6 +101,7 @@ limitations under the License.
         top: -2px;
         left: 2px;
         font-size: $font-15px;
+        white-space: normal;
     }
 
     .mx_MessageActionBar {
